--- a/openCV_road_test.ipynb
+++ b/openCV_road_test.ipynb
@@ -147,7 +147,7 @@
     "\n",
     "def lane_lines(image, lines):\n",
     "\t\"\"\"\n",
-    "\tCreate full lenght lines from pixel points.\n",
+    "\tCreate full length lines from pixel points.\n",
     "\t\tParameters:\n",
     "\t\t\timage: The input test image.\n",
     "\t\t\tlines: The output lines from Hough Transform.\n",
